// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`completes an experiment 1`] = `
<div
  aria-hidden="true"
>
  <span
    class=""
    title="Stop new user assignments. Current assignments remain active."
  >
    <button
      class="MuiButtonBase-root MuiButton-root MuiButton-outlined makeStyles-dangerButtonOutlined-6"
      tabindex="0"
      type="button"
    >
      <span
        class="MuiButton-label"
      >
        2. Complete
      </span>
      <span
        class="MuiTouchRipple-root"
      />
    </button>
  </span>
</div>
`;

exports[`renders as expected 1`] = `
<div>
  <span
    class=""
    title="This experiment is staging."
  >
    <button
      class="MuiButtonBase-root MuiButton-root MuiButton-outlined makeStyles-dangerButtonOutlined-2 Mui-disabled Mui-disabled"
      disabled=""
      tabindex="-1"
      type="button"
    >
      <span
        class="MuiButton-label"
      >
        2. Complete
      </span>
    </button>
  </span>
</div>
`;
